force-app/main/default/objects/Asset__c/Asset__c.object-meta.xml
<CustomObject>
    <label>Asset</label>
    <pluralLabel>Assets</pluralLabel>
    <nameField>
        <label>Asset Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Represents an IT asset or system being monitored by ThreatPulse.</description>
</CustomObject>