force-app/main/default/objects/Asset__c/fields/Asset_Type__c.field-meta.xml
<CustomField>
    <fullName>Asset_Type__c</fullName>
    <label>Asset Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Server</fullName>
            </value>
            <value>
                <fullName>Workstation</fullName>
            </value>
            <value>
                <fullName>Network Device</fullName>
            </value>
            <value>
                <fullName>Database</fullName>
            </value>
            <value>
                <fullName>Application</fullName>
            </value>
            <value>
                <fullName>Cloud Service</fullName>
            </value>
            <value>
                <fullName>Mobile Device</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>