force-app/main/default/objects/Asset__c/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <label>Environment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Production</fullName>
            </value>
            <value>
                <fullName>Staging</fullName>
            </value>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>DR</fullName>
                <label>Disaster Recovery</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>