force-app/main/default/objects/Asset__c/fields/IP_Range__c.field-meta.xml
<CustomField>
    <fullName>IP_Range__c</fullName>
    <label>IP Range</label>
    <type>Text</type>
    <length>100</length>
</CustomField>